# ClientManager

./: main.py  pyproject.toml
app/: gerenciador_clientes.py  menu_principal.py  validador_dados.py
app/classes/: modelo_clientes.py
app/database/: conexao_db.py  operacoes_db.py
src/app/: gerenciador_clientes.py  menu_principal.py  validador_dados.py
src/app/classes/: modelo_enderecos.py
src/app/database/: conexao_db.py  operacoes_db.py
